tests/good/16_break_1.ris
void main():
    let int i = 0;
    while (true):
        i++;
        println i;
        if (i == 10):
            break;
        endif;
    endwhile;
    return;