tests/bad/bad-while.ris
void main():
    while(42):
        print "foo";
    endwhile;
    return;